[package]
name = "raijin-assistant-slash-commands"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/assistant_slash_commands.rs"

[dependencies]
anyhow.workspace = true
raijin-assistant-slash-command.workspace = true
chrono.workspace = true
inazuma-collections.workspace = true
raijin-editor.workspace = true
raijin-feature-flags.workspace = true
raijin-fs.workspace = true
futures.workspace = true
inazuma-fuzzy.workspace = true
inazuma.workspace = true
raijin-html-to-markdown.workspace = true
raijin-http-client.workspace = true
raijin-language.workspace = true
raijin-project.workspace = true
raijin-prompt-store.workspace = true
inazuma-rope.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
inazuma-text.workspace = true
raijin-ui.workspace = true
inazuma-util.workspace = true
raijin-workspace.workspace = true
raijin-worktree.workspace = true

[dev-dependencies]
raijin-fs = { workspace = true, features = ["test-support"] }
inazuma = { workspace = true, features = ["test-support"] }
raijin-multi-buffer = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
raijin-project = { workspace = true, features = ["test-support"] }
inazuma-settings-framework = { workspace = true, features = ["test-support"] }
raijin-log.workspace = true
