[package]
name = "raijin-auto-update-ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/auto_update_ui.rs"

[dependencies]
anyhow.workspace = true
raijin-auto-update.workspace = true
raijin-client.workspace = true
raijin-editor.workspace = true
inazuma.workspace = true
raijin-markdown-preview.workspace = true
raijin-release-channel.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
raijin-ui.workspace = true
inazuma-util.workspace = true
raijin-workspace.workspace = true
